--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.11.0
-email-validator==1.3.1
+snowflake-snowpark-python==1.5.1
 -r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v2.7.9/tested_requirements/requirements_37.reqs 2
 snowflake-connector-python==2.7.9
