--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ snowflake-snowpark-python==1.5.1
 pandas==1.5.3
 streamlit-pandas==0.0.9
 -r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v3.0.4/tested_requirements/requirements_37.reqs 2
-snowflake-connector-python==3.0.4
+snowflake-connector-python[pandas]==3.0.4
